adjusted position of feedback’s tooltip box, aligned it with favourite and help tooltip box too, fixed Chrome and IE9 bug for favourite tooltip box

--- a/docroot/sites/all/themes/SBAC/sass/custom.scss
+++ b/docroot/sites/all/themes/SBAC/sass/custom.scss
@@ -733,11 +733,12 @@ nav.main-nav {
 		font-size: 0.8em;
 		position: absolute;
 		z-index: 10;
-		top: 47px;
+		top: 50px;
 		right: 116px;
 		text-align: center;
 		white-space:nowrap;
 		padding-top: 20px;
+		overflow: visible !important;
 		
 		&.f-dropdown {line-height: 1.6;}
 	}
@@ -757,7 +758,7 @@ nav.main-nav {
   .f-dropdown {
     left: auto !important;
     right: 10px !important;
-    top:48px !important;
+    top: 50px !important;
     display: none;
 
     &.open{
@@ -2079,7 +2080,7 @@ a.tabledrag-handle .handle {
 
   &.open {
     top: 50px !important;
-    right: 100px;
+    right: 250px;
     left: auto !important;
     display:block;
   }
